--- a/hcct.tex
+++ b/hcct.tex
@@ -353,7 +353,7 @@ To analyze the running time, let $\Delta$ be the value of {\tt min} after $k$ {\
 
 \subsection{Discussion}
 
-Compared to the standard approach of maintaining the entire CCT, our solution requires storing the heavy hitters data structure M and the subtree MCCT spanning nodes in M. The space required by M depends on the specific streaming algorithm that is used as a subroutine and on the value chosen for the error threshold $\varepsilon$. For \spacesaving\, this space is proportional to $1/\varepsilon$ and can be customized by appropriately choosing $\varepsilon$, e.g., according to the desired accuracy or to the amount of memory available for profiling. Such a choice appears to be crucial for the effectiveness of our approach: smaller values of $\varepsilon$ guarantee more accurate results (i.e., fewer false positives and more precise counters), but imply a larger memory footprint. In \mysection\ref{ss:hcct-eval} we will see that the high skewness of context frequency distribution guarantees the existence of very convenient tradeoffs between accuracy and space in the analysis of real-world programs.
+Compared to the standard approach of maintaining the entire CCT, our solution requires storing the heavy hitters data structure M and the subtree MCCT spanning nodes in M. The space required by M depends on the specific streaming algorithm that is used as a subroutine and on the value chosen for the error threshold $\varepsilon$. For \spacesaving\, this space is proportional to $1/\varepsilon$ and can be customized by appropriately choosing $\varepsilon$, e.g., according to the desired accuracy or to the amount of memory available for profiling. Such a choice appears to be crucial for the effectiveness of our approach: smaller values of $\varepsilon$ guarantee more accurate results (i.e., fewer false positives and more precise counters), but imply a larger memory footprint. In \mysection\ref{ss:hcct-eval} we will see that the high skewness of context frequency distribution guarantees the existence of very convenient trade-offs between accuracy and space in the analysis of real-world programs.
 
 The MCCT consists of nodes corresponding to contexts monitored in M and all their ancestors, which may be cold contexts without a corresponding entry in M. Hence, the space required by the MCCT dominates the space required by M. The number of cold ancestors is difficult to analyze theoretically: it depends on properties of the execution trace and on the structure of the CCT. In \mysection\ref{ss:hcct-accuracy} we will see that in practice this amount is negligible compared to the size of M.
 
