--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -2399,8 +2399,15 @@
   title = {{Simulated Annealing Optimization}},
   note = {\url{http://www.mathworks.com/matlabcentral/fileexchange/33109-simulated-annealing-optimization}. Accessed: 2016-03-26}
 }
+
 @misc{luajit,
   author = {Pall, Mike},
   title = {{LuaJIT 2.0 intellectual property disclosure and research opportunities}},
   note = {\url{http://lua-users.org/lists/lua-l/2009-11/msg00089.html}. Accessed: 2016-01-13},
+}
+
+@misc{vitek16,
+  author = {Vitek, Jan},
+  title = {{Personal communication}},
+  year = {2016},
 }
