--- a/introduction.tex
+++ b/introduction.tex
@@ -47,7 +47,9 @@ The contributions of this thesis aim at covering both methodological and practic
 
 All our techniques have been implemented as libraries for mainstream systems, including the \gcc\ compiler, the Jikes RVM, and the LLVM compiler infrastructure, and their source code is publicly available. To back our results and to empower other researchers to build upon the contributions of our work, we submitted two software artifacts that have been reviewed and endorsed by the scientific community.
 
-We believe that some techniques presented in this thesis might have some technology transfer potential in VM construction; private conversations we had with developers from major ICT players about our OSR library for LLVM have been quite encouraging in this sense.
+%We believe that some techniques presented in this thesis might have some technology transfer potential in VM construction; private conversations we had with developers from major ICT players about our OSR library for LLVM have been quite encouraging in this sense.
+
+We believe that some techniques presented in this thesis might have some technology transfer potential in VM construction; private conversations we had with developers from major ICT players about our OSR library for LLVM have been quite encouraging in this sense. We are aware that our tools are currently being used in a joint academic-industrial research project for the optimization of the runtime for the R language~\cite{vitek16}.
 
 \section{Structure of the Thesis}
 
