--- a/osr-llvm.tex
+++ b/osr-llvm.tex
@@ -25,8 +25,9 @@ The key to generality and platform-independence in our approach is to express th
 
 \ifdefined\noauthorea
 \begin{figure}[hb]
+\vspace{4mm} % TODO remove this
 \begin{center}
-\includegraphics[width=0.7\textwidth]{figures/osr-dynamics/osr-dynamics.eps}
+\includegraphics[width=0.6\textwidth]{figures/osr-dynamics/osr-dynamics.eps}
 \caption{\protect\input{figures/osr-dynamics/caption}}
 \end{center}
 \end{figure}
