--- a/case-studies.tex
+++ b/case-studies.tex
@@ -5,7 +5,11 @@ In this chapter we discuss three cases studies to explore the end-to-end utility
 
 The second case study, which has been repeated and endorsed by the joint Artifact Evaluation process of CGO-PPoPP 2016, presents an example of adaptive type specialization enabled by \osrkit. The flexibility offered by its compensation code abstraction allowed us to implement an optimization mechanism for a higher-order construct of the MATLAB language that significantly advances the state of the art compared to previous approaches, nearly matching the performance of code optimized by hand.
 
-Finally, the third case study illustrates an application of our algorithms to automatically build OSR mappings to the context of source-level debugging of optimized code. On prominent C benchmarks, the \reconstruct\ algorithm is able to recovery the expected source-level values for the vast majority of user variables that become endangered due to the effects of classic compiler optimizations.
+%Finally, the third case study illustrates an application of our algorithms to automatically build OSR mappings to the context of source-level debugging of optimized code. On prominent C benchmarks, the \reconstruct\ algorithm is able to recovery the expected source-level values for the vast majority of user variables that become endangered due to the effects of classic compiler optimizations.
+
+Finally, in the third case study we show that our OSR compensation code algorithms provide also useful novel building blocks to integrate in optimized code debuggers. On prominent C benchmarks, the \reconstruct\ algorithm is able to recovery the expected source-level values for the vast majority of user variables that become endangered due to the effects of classic compiler optimizations.
+
+%In this section we show that our OSR compensation code techniques provide novel building blocks that could be integrated in optimized code debuggers."
 
 \input{case-study-kblpp}
 \input{case-study-mcvm}
