--- a/abstract.tex
+++ b/abstract.tex
@@ -8,4 +8,4 @@ We then focus our attention on supporting continuous optimization through on-sta
 
 We implement our ideas in production systems such as the Jikes RVM and the LLVM compiler toolchain, and evaluate their performance against a variety of prominent benchmarks. We also investigate the end-to-end utility of our techniques by presenting three case studies: we illustrate two possible applications of multi-iteration path profiling, and show how our OSR techniques advance the state of the art for MATLAB code optimization and for source-level debugging of optimized code.
 
-The results of this thesis have been published in PLDI, OOPSLA, CGO, and Software Practice and Experience.
+Part of the results of this thesis have been published in PLDI, OOPSLA, CGO, and Software Practice and Experience.
